// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessageStatus should render verify message error 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa fixed left-0 right-0 z-10 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Title
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="text-theme-neutral-700"
        >
          Description
        </div>
        <svg
          class="w-full mt-10"
        >
          mistake.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessageStatus should render verify message success 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa fixed left-0 right-0 z-10 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm eYrebl"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Title
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="text-theme-neutral-700"
        >
          Description
        </div>
        <svg
          class="w-full mt-10"
        >
          confirmed.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
